<resources>
    <string name="app_name">Control_CheckBox</string>
    <string name="textview">Calculadora V3.0</string>
    <string name="calcular">Calcular</string>
    <string name="frist_num">Number 1</string>
    <string name="second_num">Number 2</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string name="Rsuma">Resultado Suma</string>
    <string name="rResta">Resultado Resta</string>
    <string name="rDivision">Resultado Division</string>
    <string name="rMultiplicacion">Resultado Multiplicacion</string>
</resources>